--- a/index.html
+++ b/index.html
@@ -5,33 +5,57 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript">
-  WebFontConfig = {
-    google: { families: [ 'Raleway::latin' ] }
-  };
-  (function() {
-    var wf = document.createElement('script');
-    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-    wf.type = 'text/javascript';
-    wf.async = 'true';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(wf, s);
-  })(); </script>
   <title>MedicareMojo</title>
-  <meta name="description" content="Medicare consumer information and resources. Currently serving Northern California counties.">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 
-  <link rel="stylesheet" href="/css/main.css">
+  <meta name="description" content="Medicare consumer information and resources. MedicareMojo is a pilot program, currently serving Northern California counties of Alameda, Contra Costa, Marin, San Francisco, Santa Clara, and Santa Cruz.">
+
   <link rel="canonical" href="http://medicaremojo.com/">
   <link rel="alternate" type="application/rss+xml" title="MedicareMojo" href="http://medicaremojo.com/feed.xml">
 </head>
 
 
-  <body>
-<h3>MedicareMojo coming soon</h3>
-<p>Medicare consumer information and resources. MedicareMojo is a pilot program, currently serving Northern California counties of Alameda, Contra Costa, Marin, San Francisco, Santa Clara, and Santa Cruz.</p>
+<body>
 
-<p>Brought to you by <a href="http://olderwomencoders.com">Older Women Coders</a>.</p>
+
+  <div class="overlay-navigation">
+  <nav role="navigation">
+    <ul>
+      <li><a href="#" id="showblurb" data-content="MedicareMojo coming soon">MedicareMojo</a>
+<div class="blurb" style="display:none; "><div id="againmojo">MedicareMojo<br></div>Medicare 
+    consumer information and resources. MedicareMojo is a pilot program, 
+    currently serving Northern California counties of Alameda, Contra 
+    Costa, Marin, San Francisco, Santa Clara, and Santa Cruz.</div> 
+        </li>
+      <li><a href="http://olderwomencoders.com" target="_blank" data-content="Brought to you by Older Women Coders">OWC</a></li>
+    </ul>
+
+  </nav>
+</div>
+    
+
+
+
+<section class="home">
+  <div class="open-overlay">
+    <span class="bar-top"></span>
+    <span class="bar-middle">
+</span>
+    <span class="bar-bottom"></span>
+  </div>
+</div>
+</section>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='http://julian.com/research/velocity/build/jquery.velocity.min.js'></script>
+    <script src='http://julian.com/research/velocity/build/velocity.ui.js'></script>
+<!--
+    <script src='js/jquery.min.js'></script>
+    <script src='js/jquery.velocity.min.js'></script>
+    <script src='js/velocity.ui.js'></script>
+-->
+
+    <script src="js/index.js"></script>
 
   </body>
 
